Fix images stretch

--- a/bookwyrm/static/css/bookwyrm.css
+++ b/bookwyrm/static/css/bookwyrm.css
@@ -615,7 +615,7 @@ ol.ordered-list li::before {
     grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
     gap: 1.5rem;
     align-items: end;
-    justify-items: center;
+    justify-items: stretch;
 }
 
 .books-grid > .is-big {
